tests/ui/pattern/usefulness/slice_of_empty.stderr
error: unreachable pattern
  --> $DIR/slice_of_empty.rs:14:9
   |
LL |         &[_] => (),
   |         ^^^^
   |
note: the lint level is defined here
  --> $DIR/slice_of_empty.rs:3:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/slice_of_empty.rs:15:9
   |
LL |         &[_, _, ..] => (),
   |         ^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/slice_of_empty.rs:20:9
   |
LL |         &[_] => (),
   |         ^^^^

error[E0004]: non-exhaustive patterns: `&[]` not covered
  --> $DIR/slice_of_empty.rs:18:11
   |
LL |     match nevers {
   |           ^^^^^^ pattern `&[]` not covered
   |
   = note: the matched value is of type `&[!]`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL |         &[_] => (), &[] => todo!(),
   |                   ++++++++++++++++

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0004`.
